# youtube-cycling

./: .gitignore  README.md  analysis.py  default.config  default.secret  main.py  mapping.csv  pyproject.toml
.github/linters/: .flake8
.github/workflows/: linter.yml
utils/: bicyclist_detect.py  bicyclist_following.py
