[project]
name = "youtube-cycling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "bs4>=0.0.2",
    "kaleido",
    "numpy==2.3.4",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "plotly==6.3.1",
    "polars==1.34.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
